<resources>
    <string name="app_name">Proyecto Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Facturación App</string>
    <string name="nav_header_subtitle">By Jorge Fullana</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bills">Facturas</string>
    <string name="menu_delivery_note">Albaranes</string>
    <string name="menu_config">Configuración</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="ok">Ok</string>
    <string name="residence">Domicilio</string>
    <string name="edit">Editar</string>
    <string name="nif">NIF</string>
    <string name="comments">Comentarios</string>
    <string name="code">Código</string>
    <string name="article">Artículo</string>
    <string name="units">Unidades</string>
    <string name="price">Precio</string>
    <string name="bill">Factura</string>
    <string name="quantity">Cantidad</string>
    <string name="new_item">Nuevo Item</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Descuento</string>
    <string name="total_bill">Total Factura</string>
    <string name="empty_field_error">El texto no pude estár vacio</string>
    <string name="fill_out_all_the_fields">Rellena todos los campos obligatorios</string>
    <string name="name">Nombre</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="postal_code">Código postal</string>
    <string name="phone">Teléfono</string>
    <string name="email">Email</string>
    <string name="client">Cliente</string>
    <string name="company">Empresa</string>
    <string name="ceo">Ceo</string>
    <string name="comment">Comentario</string>
    <string name="iva">IVA</string>
    <string name="two_dots">:</string>
    <string name="date">Fecha</string>
    <string name="bill_number">Número de Factura</string>
    <string name="bill_data">Datos Factura</string>
    <string name="show">Mostrar</string>
    <string name="collapse">Colapsar</string>
    <string name="create">Crear</string>
    <string name="create_bill">Crear Factura</string>
    <string name="error">Error</string>
    <string name="error_connection">Error al crear la factura, \\nconsulta que estés conectado la red</string>
    <string name="total">Total</string>
    <string name="error_no_items">Tienes que almenos crear un articulo</string>
    <string name="error_required_attributes">Flatan añadir valores</string>
    <string name="number">Número</string>
    <string name="on">en</string>
    <string name="error_permissions">Habilita los permisos de escritura</string>
</resources>