<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_primary_color_rounded"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/icon_edit"
            android:tint="@color/primaryVariationD"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/titleDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            app:errorEnabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/codeDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/article">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/articleDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/units">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unitsDialog"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/okDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:text="@string/ok"
            android:textColor="@color/primaryVariationD"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
