<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_primarycolor_rounded"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/edit"
            android:tint="@color/primareVariationD"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/titleDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cllient">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/clientDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/residence">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/residenceDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ciudad">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nif">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nifDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comments">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/okDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:text="@string/ok"
            android:textColor="@color/primareVariationD"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
